...
        );
        return;
      }

      final dialogTitle = isClosedOrder
          ? 'Atenção: Ordem de serviço encerrada!'.hardcoded
          : 'Salvar alterações?'.hardcoded;
      final dialogContent = isClosedOrder
          ? 'Esta ordem de serviço já está finalizada ou cancelada. Alterá-la pode impactar o histórico e o cálculo de SLA. Deseja realmente salvar as alterações?'
                .hardcoded
          : null;

      final pressedOk = await showAlertDialog(
...
